finally fixed the shifting problem with modals

--- a/public/stylesheets/sass/homepage.scss
+++ b/public/stylesheets/sass/homepage.scss
@@ -6,6 +6,11 @@
 
 html { overflow-y: scroll; }
 
+
+body.modalTransition {
+  overflow-y: hidden;
+}
+
 // button.close {
 //   width: 2em;
 //   height: 2em;
